--- a/FS_MF/FS_MF.ipynb
+++ b/FS_MF/FS_MF.ipynb
@@ -68,7 +68,7 @@
     "print(f\"Best RMSE: {rmse}\")\n",
     "print(f\"Best Hyperparameters: {grid_search.best_params_}\")\n",
     "\n",
-    "# Model Deployment\n",
+    "# Model Deployment\n"
    ]
   },
   {
